--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+gpt.url=https://api.openai.com/v1/chat/
+dalle.url=https://api.openai.com/v1/images/
+dalle.key=123
+gpt.key=123
+gpt.temperature=0.6
