--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 gpt.url=https://api.openai.com/v1/chat/
 dalle.url=https://api.openai.com/v1/images/
-dalle.key=123
+dalle.key=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
 gpt.key=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
 gpt.temperature=0.6
